# bzlmodRio-studica

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  maven_cpp_deps.bzl  maven_java_deps.bzl
.github/workflows/: auto_update.yml  build.yml  lint.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  auto_update.py  generate.py  get_navx_dependencies.py  get_studica_dependencies.py  get_version.py  publish.py  vendor_dep.json
libraries/cpp/navx/: BUILD.bazel
libraries/cpp/navx-cpp/: BUILD.bazel
libraries/cpp/studica-cpp/: BUILD.bazel
libraries/cpp/studica-driver/: BUILD.bazel
libraries/java/navx/: BUILD.bazel
libraries/java/navx-java/: BUILD.bazel
libraries/java/studica-java/: BUILD.bazel
private/cpp/Studica-cpp/: BUILD.bazel  shared.BUILD.bazel
private/cpp/Studica-driver/: BUILD.bazel  shared.BUILD.bazel
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: MODULE.bazel  WORKSPACE
tests/cpp/navx/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/navx-cpp/: BUILD.bazel  test.cpp
tests/cpp/studica-cpp/: BUILD.bazel  main.cpp
tests/cpp/studica-driver/: BUILD.bazel  main.cpp  test.cpp
tests/java/navx/: BUILD.bazel  BasicTest.java  Main.java
tests/java/navxjava/: BUILD.bazel  BasicTest.java  Main.java
tests/java/studicajava/: BUILD.bazel  BasicTest.java  Main.java
tests/robot-cpp/: BUILD  robot.cpp  robot.hpp
tests/robot-cpp/commands/: BUILD  elevator_setpoint_command.cpp  elevator_setpoint_command.hpp  joystick_drive_command.cpp  joystick_drive_command.hpp  shooter_rpm_command.cpp  shooter_rpm_command.hpp
tests/robot-cpp/subsystems/: BUILD  drivetrain.cpp  drivetrain.hpp  elevator.cpp  elevator.hpp  shooter.cpp  shooter.hpp
tests/robot-java/: BUILD
tests/robot-java/src/main/java/frc/robot/: BUILD  RobotContainer.java
tests/robot-java/src/main/java/frc/robot/commands/: BUILD  JoystickDriveCommand.java  SetElevatorSetpointCommand.java  ShooterRpmCommand.java
tests/robot-java/src/main/java/frc/robot/subsystems/: BUILD  DriveTrain.java  Elevator.java  PortMap.java  Shooter.java
tests/styleguide/: java_styleguide.bzl
