py_library(
    name = "get_navx_dependencies",
    srcs = ["get_navx_dependencies.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib-gentool//:get_allwpilib_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    deps = [
        ":get_navx_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "publish",
    srcs = ["publish.py"],
    deps = [
        ":get_navx_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "auto_update",
    srcs = ["auto_update.py"],
    deps = [
        ":generate",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)
