load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "get_studica_dependencies",
    srcs = ["get_studica_dependencies.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib-gentool//:get_allwpilib_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    deps = [
        ":get_studica_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "publish",
    srcs = ["publish.py"],
    deps = [
        ":get_studica_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "auto_update",
    srcs = ["auto_update.py"],
    deps = [
        ":generate",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "get_version",
    srcs = ["get_version.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":get_studica_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)
