bazel_dep(name = "bzlmodrio-studica", version = "")
local_path_override(
    module_name = "bzlmodrio-studica",
    path = "..",
)

bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_bazelrio", version = "0.0.14")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr2")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2025.3.2.bcr1")
bazel_dep(name = "bzlmodrio-opencv", version = "2025.4.10.0-3.bcr2")
bazel_dep(name = "bzlmodrio-ni", version = "2025.2.0.bcr1")
bazel_dep(name = "rules_pmd", version = "7.2.0.bcr1")
bazel_dep(name = "rules_checkstyle", version = "10.12.2.bcr1")
bazel_dep(name = "rules_wpiformat", version = "2025.33")
bazel_dep(name = "rules_wpi_styleguide", version = "2024.11.19")
bazel_dep(name = "rules_spotless", version = "2.40.0.bcr1")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.12-7")
archive_override(
    module_name = "rules_bzlmodrio_jdk",
    integrity = "sha256-SrikyrF2v2lENdqn9aFC//d0TkIE620lR60yXTrWFTs=",
    strip_prefix = "rules_bzlmodrio_jdk-4ecd4cbc97dfbfe2ceefa627de1228e2f2ca5773",
    urls = ["https://github.com/wpilibsuite/rules_bzlmodRio_jdk/archive/4ecd4cbc97dfbfe2ceefa627de1228e2f2ca5773.tar.gz"],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.10.1",
        "org.junit.jupiter:junit-jupiter-params:5.10.1",
        "org.junit.jupiter:junit-jupiter-engine:5.10.1",
        "org.junit.platform:junit-platform-commons:1.6.1",
        "org.junit.platform:junit-platform-console:1.6.1",
        "org.junit.platform:junit-platform-engine:1.6.1",
        "org.junit.platform:junit-platform-launcher:1.6.1",
        "org.junit.platform:junit-platform-suite-api:1.6.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(
    maven,
    "maven",
)
