load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "navx",
    srcs = ["@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_sources//:sources"],
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_headers//:headers",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc",
    ],
)
