load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "navx",
    srcs = ["@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_sources//:sources"],
    copts = select({
        "@rules_bazelrio//conditions:linux_x86_64": [
            "-Wno-deprecated-declarations",
            "-Wno-unused-parameter",
        ],
        "@rules_bazelrio//conditions:osx": [
            "-Wno-deprecated-declarations",
            "-Wno-unused-parameter",
        ],
        "@rules_bazelrio//conditions:windows": [],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": [
            "-Wno-deprecated-declarations",
            "-Wno-unused-parameter",
        ],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": [
            "-Wno-deprecated-declarations",
            "-Wno-unused-parameter",
        ],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": [
            "-Wno-deprecated-declarations",
            "-Wno-unused-parameter",
        ],
    }),
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@bazelrio_com_kauailabs_navx_frc_navx-frc-cpp_headers//:headers",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc",
    ],
)
