load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "studica-cpp",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
        "@bzlmodrio-navx//private/cpp/Studica-cpp:shared",
        "@bzlmodrio-navx//private/cpp/Studica-driver:shared",
    ],
)
