load("@rules_java//java:defs.bzl", "java_import")

java_import(
    name = "navx-java",
    jars = ["@com_studica_frc_studica_java//jar:file"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-navx//private/cpp/Studica-driver:shared",
    ],
)
