load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "header_files",
    actual = "@bazelrio_com_studica_frc_studica-cpp_headers//:header_files",
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
)

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:windows": ["@bazelrio_com_studica_frc_studica-cpp_windowsx86-64//:shared_interface"],
    }),
    linkstatic = True,
    tags = ["manual"],
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
    deps = ["@bazelrio_com_studica_frc_studica-cpp_headers//:headers"],
)

filegroup(
    name = "shared_raw",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_com_studica_frc_studica-cpp_linuxx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_com_studica_frc_studica-cpp_osxuniversal//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:windows": ["@bazelrio_com_studica_frc_studica-cpp_windowsx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_com_studica_frc_studica-cpp_linuxarm64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_com_studica_frc_studica-cpp_linuxarm32//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_studica_frc_studica-cpp_linuxathena//:shared"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
)

cc_library(
    name = "shared",
    srcs = [":shared_raw"],
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
    deps = [] + select({
        "@rules_bzlmodrio_toolchains//conditions:windows": [":shared_interface"],
        "//conditions:default": [],
    }) + ["@bazelrio_com_studica_frc_studica-cpp_headers//:headers"],
    alwayslink = 1,
)

cc_library(
    name = "static",
    linkstatic = 1,
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
    deps = ["@bazelrio_com_studica_frc_studica-cpp_headers//:headers"] + select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_com_studica_frc_studica-cpp_linuxx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_com_studica_frc_studica-cpp_osxuniversalstatic//:static_libs"],
        "@rules_bzlmodrio_toolchains//conditions:windows": ["@bazelrio_com_studica_frc_studica-cpp_windowsx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_com_studica_frc_studica-cpp_linuxarm64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_com_studica_frc_studica-cpp_linuxarm32static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_studica_frc_studica-cpp_linuxathenastatic//:static_libs"],
    }),
)
