load("@rules_cc//cc:defs.bzl", "cc_library")

JNI_PATTERN=[
    "**/*jni.dll",
    "**/*jni.so*",
    "**/*jni.dylib",
    "**/*_java*.dll",
    "**/lib*_java*.dylib",
    "**/lib*_java*.so",
]

static_srcs = glob([
        "**/*.lib",
        "**/*.a"
    ],
    exclude=["**/*jni.lib"],
    allow_empty=True,
)
shared_srcs = glob([
        "**/*.dll",
        "**/*.so*",
        "**/*.dylib",
    ],
    exclude=JNI_PATTERN + ["**/*.so.debug"],
    allow_empty = True,
)
shared_jni_srcs = glob(JNI_PATTERN, exclude=["**/*.so.debug"], allow_empty=True)
filegroup(
    name = "shared_interface",
    srcs = static_srcs,
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
)

filegroup(
    name = "shared",
    srcs = shared_srcs,
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
)

