load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "header_files",
    actual = "@bazelrio_com_studica_frc_studica-driver_headers//:header_files",
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
)

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_com_studica_frc_studica-driver_windowsx86-64//:shared_interface"],
    }),
    linkstatic = True,
    tags = ["manual"],
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
    deps = ["@bazelrio_com_studica_frc_studica-driver_headers//:headers"],
)

filegroup(
    name = "shared_raw",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_com_studica_frc_studica-driver_linuxx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_com_studica_frc_studica-driver_osxuniversal//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_com_studica_frc_studica-driver_windowsx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_com_studica_frc_studica-driver_linuxarm64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_com_studica_frc_studica-driver_linuxarm32//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_studica_frc_studica-driver_linuxathena//:shared"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
)

cc_library(
    name = "shared",
    srcs = [":shared_raw"],
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
    deps = [] + select({
        "@rules_bzlmodrio_toolchains//conditions:windows_arm64": [":shared_interface"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": [":shared_interface"],
        "//conditions:default": [],
    }) + ["@bazelrio_com_studica_frc_studica-driver_headers//:headers"],
    alwayslink = 1,
)

cc_library(
    name = "static",
    linkstatic = 1,
    visibility = ["@bzlmodrio-studica//:__subpackages__"],
    deps = ["@bazelrio_com_studica_frc_studica-driver_headers//:headers"] + select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_com_studica_frc_studica-driver_linuxx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_com_studica_frc_studica-driver_osxuniversalstatic//:static_libs"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_com_studica_frc_studica-driver_windowsx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_com_studica_frc_studica-driver_linuxarm64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_com_studica_frc_studica-driver_linuxarm32static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_studica_frc_studica-driver_linuxathenastatic//:static_libs"],
    }),
)
