cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    # deps = ["@com_github_google_glog//:glog"],
    deps = ["@bzlmodrio-navx//libraries/cpp/navx"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    tags = [
        "bazelrio-cpp-test",
        "no-sandbox",
    ],
    deps = [
        "@bzlmodrio-navx//libraries/cpp/navx",
        "@googletest//:gtest_main",
    ],
)
