load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    # deps = ["@com_github_google_glog//:glog"],
    deps = ["@bzlmodrio-studica//libraries/cpp/studica-cpp"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    tags = [
        "bazelrio-cpp-test",
        "no-sandbox",
    ],
    deps = [
        "@bzlmodrio-studica//libraries/cpp/studica-cpp",
        "@googletest//:gtest_main",
    ],
)
