load("@rules_bazelrio//:java_rules.bzl", "bazelrio_java_binary", "bazelrio_java_test")
load("@rules_wpi_styleguide//styleguide:java_styleguide.bzl", "java_styleguide")

bazelrio_java_binary(
    name = "main",
    srcs = ["Main.java"],
    javacopts = ["-Werror"],
    jvm_flags = [
        "-Djava.library.path=.",
    ],
    main_class = "studicajava.Main",
    deps = [
        "@bzlmodrio-studica//libraries/java/studica-java",
    ],
)

bazelrio_java_test(
    name = "test",
    srcs = ["BasicTest.java"],
    args = [
        "--select-package",
        "studicajava",
    ],
    javacopts = ["-Werror"],
    jvm_flags = [
        "-Djava.library.path=.",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    tags = [
        "bazelrio-java-test",
        "no-sandbox",
    ],
    runtime_deps = [
        "@maven//:org_junit_platform_junit_platform_commons",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
    deps = [
        "@bzlmodrio-studica//libraries/java/studica-java",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
    ],
)

java_styleguide(name = "studica")
